# MATHNEON

./: CHANGELOG.md  CMakeLists.txt  Goal.md  README.md  layout.md
.github/workflows/: build_and_test.yml
checks/: neon_check.c  neon_check.cpp
doc/: building.md  classification_of_array.md
includes/: MN_dtype.h  MN_factor.h  MN_macro.h  MN_math.h
src/abs/: MN_abs.c  MN_abs_neon.c
src/add/: MN_add.c  MN_add_neon.c
src/addc/: MN_addc.c  MN_addc_neon.c
src/div/: MN_div_neon.c  Mn_div.c
src/mul/: MN_mul.c  MN_mul_neon.c
src/mulc/: MN_mulc.c  MN_mulc_neon.c
src/sub/: MN_sub.c  MN_sub_neon.c
src/subc/: MN_subc.c  MN_subc_neon.c
test/: test.md  test_abs_neon.c  test_add_neon.c  test_addc_neon.c  test_div_neon.c  test_mul_neon.c  test_mulc_neon.c  test_sub_neon.c  test_subc_neon.c
